00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medical-erp
  labels:
    app.kubernetes.io/part-of: medical-erp
