04-service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: medical-erp
  labels:
    app: main-service
spec:
  type: ClusterIP
  selector:
    app: main-service
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
