04-service-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: medical-erp
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
