04-service-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: medical-erp
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
