04-service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: medical-erp
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
